[gd_scene load_steps=9 format=2]

[ext_resource path="res://Sprites/UI/Inventory.png" type="Texture" id=1]
[ext_resource path="res://Scenes/GUI/InventorySlotContainer.tscn" type="PackedScene" id=2]
[ext_resource path="res://Sprites/UI/Player_Equipments_Inventory.png" type="Texture" id=3]
[ext_resource path="res://Scripts/GUI/Intentory/PlayerFaceset.gd" type="Script" id=4]
[ext_resource path="res://Resources/StatusFont.tres" type="DynamicFont" id=5]
[ext_resource path="res://Scripts/GUI/Intentory/StatusContainer.gd" type="Script" id=6]
[ext_resource path="res://Scenes/GUI/EquipmentSlotContainer.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scripts/GUI/Intentory/EquipmentsInventoryContainer.gd" type="Script" id=8]

[node name="Inventory" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InventoryContainer" type="CenterContainer" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -162.0
margin_top = -10.0
margin_right = -20.0
margin_bottom = 70.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InventoryTexture" type="TextureRect" parent="InventoryContainer"]
margin_right = 142.0
margin_bottom = 80.0
texture = ExtResource( 1 )

[node name="InventorySlotContainer" parent="InventoryContainer/InventoryTexture" instance=ExtResource( 2 )]

[node name="EquipmentsInventoryContainer" type="CenterContainer" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 20.0
margin_top = -60.0
margin_right = 118.0
margin_bottom = 40.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EquipmentsInventoryTexture" type="TextureRect" parent="EquipmentsInventoryContainer"]
margin_right = 98.0
margin_bottom = 100.0
texture = ExtResource( 3 )

[node name="PlayerFaceset" type="TextureRect" parent="EquipmentsInventoryContainer/EquipmentsInventoryTexture"]
margin_left = 17.0
margin_top = 26.0
margin_right = 33.0
margin_bottom = 45.0
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="StatusContainer" type="Control" parent="EquipmentsInventoryContainer/EquipmentsInventoryTexture"]
margin_left = 37.0
margin_top = 25.0
margin_right = 81.0
margin_bottom = 46.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatusLabel" type="Label" parent="EquipmentsInventoryContainer/EquipmentsInventoryTexture/StatusContainer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -7.5
margin_top = 1.0
margin_right = 7.5
margin_bottom = 7.0
custom_fonts/font = ExtResource( 5 )
text = "Status"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StrengthLabel" type="Label" parent="EquipmentsInventoryContainer/EquipmentsInventoryTexture/StatusContainer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_top = 7.0
margin_right = -5.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 5 )
text = "For√ßa:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StrengthLabelAux" type="Label" parent="EquipmentsInventoryContainer/EquipmentsInventoryTexture/StatusContainer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 2.0
margin_top = 7.0
margin_right = 17.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 5 )
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthLabel" type="Label" parent="EquipmentsInventoryContainer/EquipmentsInventoryTexture/StatusContainer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_top = 13.0
margin_right = -5.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 5 )
text = "Vida:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthLabelAux" type="Label" parent="EquipmentsInventoryContainer/EquipmentsInventoryTexture/StatusContainer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 2.0
margin_top = 13.0
margin_right = 17.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 5 )
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EquipmentSlotContainer" parent="EquipmentsInventoryContainer/EquipmentsInventoryTexture" instance=ExtResource( 7 )]

[connection signal="entered_equip_area" from="EquipmentsInventoryContainer/EquipmentsInventoryTexture/EquipmentSlotContainer" to="InventoryContainer/InventoryTexture/InventorySlotContainer" method="mouse_entered"]
[connection signal="exited_equip_area" from="EquipmentsInventoryContainer/EquipmentsInventoryTexture/EquipmentSlotContainer" to="InventoryContainer/InventoryTexture/InventorySlotContainer" method="mouse_exited"]
[connection signal="swap_items" from="EquipmentsInventoryContainer/EquipmentsInventoryTexture/EquipmentSlotContainer" to="InventoryContainer/InventoryTexture/InventorySlotContainer" method="swap_equipped_item"]
